Fix problem with z-index on menu on mobiles

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2235,5 +2235,14 @@ p {
 
     .header__search-button { 
         margin-left: 0px;
+        z-index: 0;
+    }
+
+    .nav__dropdown-content-wrapper {
+        z-index: 1;
+    }
+
+    .nav__dropdown-button {
+        
     }
 }
